# python-telegram-bot-scaffold

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env_example.sh  pyproject.toml
alembic/: README  env.py
alembic/versions/: bf564ab3b335_migration_001_init.py
bot/: __main__.py  models.py  settings.py
bot/database/: actions.py
bot/handlers/: commands.py
bot/locales/: translations.json
bot/utils/: logger.py  translations.py
